The Mushroom Update
- Added mushroom scatters to Gloth.  Very fun modelling and texturing  exercise!
- Added an alternative spire-shaped rock to those found on Pol, as they
  don't have any bottoms and look terrible when placed on slanted
  surfaces.  These can be found on Lema.
  - Changed some stuff on Run.  Don't remember what though.  Lol.

--- a/configs/Gloth.cfg
+++ b/configs/Gloth.cfg
@@ -25,116 +25,123 @@
             {
                 Biome
                 {
-                    name = Super-Sargasso Sea
+                    name = ssSea
 					displayName = Super-Sargasso Sea^N
                     value = 1.0
                     color = #FF0000
                 }
                 Biome
                 {
-                    name = Omarion Sea
+                    name = oSea
 					displayName = Omarion Sea^N
                     value = 1.0
                     color = #FF6A00
                 }			
                 Biome
                 {
-                    name = Mare Rachel
+                    name = mr
 					displayName = Mare Rachel^N
                     value = 1.0
                     color = #FFD800
                 }
                 Biome
                 {
-                    name = Mare Moneta
+                    name = mm
 					displayName = Mare Moneta^N
                     value = 1.0
                     color = #7F0000
                 }
                 Biome
                 {
-                    name = Mare Siri
+                    name = ms
 					displayName = Mare Siri^N
                     value = 1.0
                     color = #7F6A00
 				}
 				Biome
                 {
-                    name = Lacus Aenea
+                    name = la
 					displayName = Lacūs Erina^N
                     value = 1.0
                     color = #DAFF7F
                 }	
 				Biome
                 {
-                    name = Renes Crater Lake
+                    name = rCrateL
 					displayName = Renés Crater Lake^N
                     value = 1.0
                     color = #B200FF
                 }	
 				Biome
                 {
-                    name = Tiny Lake
+                    name = miscL
 					displayName = Tiny Lake^N
                     value = 1.0
                     color = #001800
                 }	
 				Biome
                 {
-                    name = An Oddly Warm Spot
+                    name = cat
 					displayName = An Oddly Warm Spot^N
                     value = 1.0
                     color = #808080
                 }	
 				Biome
                 {
-                    name = Bleached Highlands
+                    name = high
 					displayName = Bleached Highlands^N
                     value = 1.0
                     color = #FFFFFF
                 }	
 				Biome
                 {
-                    name = Hydrocarbon Deserts
+                    name = mid
 					displayName = Hydrocarbon Deserts^N
                     value = 1.0
                     color = #D4FFFF
                 }	
 				Biome
                 {
-                    name = Coastal Lowlands
+                    name = low
 					displayName = Coastal Lowlands^N
                     value = 1.0
                     color = #004A7F
                 }	
 				Biome
                 {
-                    name = Renes Crater
+                    name = rCrate
 					displayName = Renés Crater^N
                     value = 1.0
                     color = #FF7FB6
                 }	
 				Biome
                 {
-                    name = Odo Island
+                    name = special
 					displayName = Odo Island^N
                     value = 1.0
                     color = #FF7FED
                 }	
 				Biome
                 {
-                    name = Auber Crater
+                    name = aCrate
 					displayName = Auber Crater ^N
                     value = 1.0
                     color = #7FFFC5
                 }	
 				Biome
                 {
-                    name = Jonois Crater
+                    name = jCrate
 					displayName = Jonois Crater^N
                     value = 1.0
                     color = #FFE97F
-                }					
+                }
+				Biome
+                {
+                    name = bigshroom
+					displayName = Mushroom Kingdom^N
+                    value = 1.0
+                    color = #7F92FF
+                }						
 			}		
         }
         Orbit
@@ -524,14 +531,6 @@
 					B = 1
 					C = 0
                 }
-				AltitudeAlpha
-				{
-					atmosphereDepth = 8000
-					invert = False
-					order = 999999999
-					enabled = True
-					name = _Material_ModProjection
-				}
 				VertexSimplexHeight
 				{
 					deformity = 400
@@ -604,56 +603,269 @@
                     order = 50
                     enabled = true
 				}
-                LandControl // feel free to copy paste this because i honestly cant bother explaining everything here
+                LandControl
 				{
-					altitudeBlend = 0.01
-					altitudeFrequency = 2
-					altitudeOctaves = 2
-					altitudePersistance = 0.5
-					altitudeSeed = 53453
-					createColors = True
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
+					createColors = False
 					createScatter = True
-					latitudeBlend = 0.05
-					latitudeFrequency = 12
-					latitudeOctaves = 6
-					latitudePersistance = 0.5
-					latitudeSeed = 53456345
-					longitudeBlend = 0.05
-					longitudeFrequency = 12
-					longitudeOctaves = 4
-					longitudePersistance = 0.5
-					longitudeSeed = 98888
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
 					useHeightMap = False
-					vHeightMax = 6000
-					order = 60
+					vHeightMax = 30000
+					order = 999999
 					enabled = True
-					name = LCExample
-					Scatters
+					altitudeSimplex
 					{
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
-					landClasses
+					latitudeSimplex
+					{
+						frequency = 1
+						octaves = 1
+						persistence = 1
+					}
+					longitudeSimplex
+					{
+						frequency = 1
+						octaves = 1
+						persistence = 1
+					}
+					scatters
+					{
+						Value
+						{
+							materialType = CutoutDiffuse
+							mesh = KnuraSystem/meshes/shrump.obj
+							castShadows = True
+							densityFactor = 0.7
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 1.3
+							maxScatter = 35
+							maxSpeed = 1000
+							minScale = 1
+							recieveShadows = True
+							name = coastshroom
+							seed = 789789
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = low
+							Material
+							{
+								color = RGBA(255,240,255,255)
+								mainTex = KnuraSystem/textures/shroom.png
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = CutoutDiffuse
+							mesh = KnuraSystem/meshes/shrump.obj
+							castShadows = True
+							densityFactor = 0.7
+							maxCache = 512
+							maxCacheDelta = 23
+							maxLevelOffset = 0
+							maxScale = 2.5
+							maxScatter = 35
+							maxSpeed = 1000
+							minScale = 1.8
+							recieveShadows = True
+							name = tallshroom
+							seed = 981998
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = bigshroom
+							Material
+							{
+								color = RGBA(255,240,255,255)
+								mainTex = KnuraSystem/textures/shroom.png
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = CutoutDiffuse
+							mesh = KnuraSystem/meshes/smallshroom.obj
+							castShadows = True
+							densityFactor = 0.7
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 0.5
+							maxScatter = 120
+							maxSpeed = 1000
+							minScale = 0.2
+							recieveShadows = True
+							name = coastsmallshroom
+							seed = 2344325
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = low
+							Material
+							{
+								color = RGBA(255,240,255,255)
+								mainTex = KnuraSystem/textures/shroom.png
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = CutoutDiffuse
+							mesh = KnuraSystem/meshes/smallshroom.obj
+							castShadows = True
+							densityFactor = 0.7
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 0.5
+							maxScatter = 35
+							maxSpeed = 1000
+							minScale = 0.15
+							recieveShadows = True
+							name = smallshroom
+							seed = 2344325
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = rCrate,aCrate,jCrate,mid
+							Material
+							{
+								color = RGBA(255,240,255,255)
+								mainTex = KnuraSystem/textures/shroom.png
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 0.7
+							maxScatter = 60
+							maxSpeed = 1000
+							minScale = 0.4
+							recieveShadows = True
+							name = pebs
+							seed = 935645
+							verticalOffset = 0
+							delete = False
+							collide = False
+							science = False
+							Material
+							{
+								color = RGBA(170,135,80,255)
+								mainTex = BUILTIN/laytheSand_diffuse
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+					}
+					LandClasses
 					{
 						Value
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 1
-							coverageFrequency = 1.5
-							coverageOctaves = 4
-							coveragePersistance = 0.5
-							coverageSeed = 171214
-							name = Main
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
 							latDelta = 1
 							latitudeDouble = False
 							lonDelta = 1
 							minimumRealHeight = 0
-							noiseBlend = 0.5
-							noiseColor = 0,0,0,1
-							noiseFrequency = 8
-							noiseOctaves = 4
-							noisePersistance = 0.5
-							noiseSeed = 453737
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
+							noiseSeed = 1
 							delete = False
 							altitudeRange
 							{
@@ -662,18 +874,24 @@
 								startEnd = 0
 								startStart = 0
 							}
-							// latitudeDoubleRange
-							// {
-							// 	endEnd = 0.4
-							// 	endStart = 0.39
-							// 	startEnd = 0.25
-							// 	startStart = 0.23
-							// }
+							coverageSimplex
+							{
+								frequency = 1
+								octaves = 1
+								persistence = 1
+							}
+							latitudeDoubleRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
 							latitudeRange
 							{
 								endEnd = 1
-								endStart = 0.75
-								startEnd = 0.25
+								endStart = 1
+								startEnd = 0
 								startStart = 0
 							}
 							longitudeRange
@@ -683,8 +901,39 @@
 								startEnd = -1
 								startStart = -1
 							}
+							noiseSimplex
+							{
+								frequency = 1
+								octaves = 1
+								persistence = 1
+							}
 							scatters
 							{
+								Scatter
+								{
+									density = 1
+									scatterName = coastshroom
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = coastsmallshroom
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = smallshroom
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = tallshroom
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = pebs
+								}
 							}
 						}
 					}
