--- a/configs/Lema.cfg
+++ b/configs/Lema.cfg
@@ -23,49 +23,56 @@
             {
                 Biome
                 {
-                    name = Ancient Impact Sites
+                    name = bcrate
 					displayName = Ancient Impact Sites^N
                     value = 1.0
                     color = #5B7F00
                 }
                 Biome
                 {
-                    name = Screeslopes
+                    name = slope
 					displayName = Screeslopes^N
                     value = 1.0
+                    color = #FFD800
+                }		
+				Biome
+                {
+                    name = peaks
+					displayName = Frosted Tips^N
+                    value = 1.0
                     color = #FFFFFF
-                }			
+                }		
                 Biome
                 {
-                    name = Mons Tricraterem
+                    name = mount
 					displayName = Mons Tricraterem^N
                     value = 1.0
                     color = #404040
                 }
                 Biome
                 {
-                    name = Small Craters
+                    name = scrate
 					displayName = Small Craters^N
                     value = 1.0
                     color = #000000
                 }
                 Biome
                 {
-                    name = Not-So-Ancient Impact Sites
+                    name = mcrate
 					displayName = Not-So-Ancient Impact Sites^N
                     value = 1.0
                     color = #7F3300
 				}
 				Biome
                 {
-                    name = Oceanus Grimachus
+                    name = floor
 					displayName = Ocean Grimachus^N
                     value = 1.0
                     color = #B200FF
                 }	
 				Biome
                 {
-                    name = Glitter Freeze
+                    name = north
 					displayName = Glitter Freeze^N
                     value = 1.0
                     color = #7FFFC5
@@ -181,14 +188,6 @@
 					B = 1
 					C = 0
                 }
-				AltitudeAlpha
-				{
-					atmosphereDepth = 8000
-					invert = False
-					order = 999999999
-					enabled = True
-					name = _Material_ModProjection
-				}
 				VertexSimplexHeight
 				{
 					deformity = 200
@@ -365,7 +364,7 @@
 					longitudePersistance = 1
 					longitudeSeed = 1
 					useHeightMap = False
-					vHeightMax = 10000
+					vHeightMax = 30000
 					order = 999999
 					enabled = True
 					altitudeSimplex
@@ -391,38 +390,73 @@
 						Value
 						{
 							materialType = BumpedDiffuse
-							mesh = KnuraSystem/Mesh/polPile.glb
+							mesh = KnuraSystem/meshes/pile.obj
 							castShadows = True
 							densityFactor = 1
 							maxCache = 512
 							maxCacheDelta = 32
 							maxLevelOffset = 0
-							maxScale = 4
+							maxScale = 3
 							maxScatter = 35
 							maxSpeed = 1000
 							minScale = 2
 							recieveShadows = True
 							name = dustPile
 							seed = 789789
-							verticalOffset = 0
+							verticalOffset = -2
 							delete = False
 							collide = True
 							science = False
-							Biomes
-							{
-								Value = Ancient Impact Sites
-								Value = Not-So-Ancient Impact Sites
-								Value = Oceanus Grimachus
-								Value = Glitter Freeze
-							}
+							allowedBiomes = mcrate,bcrate,floor
 							Material
 							{
-								color = RGBA(0,255,0,255)
-								mainTex = BUILTIN/gillyScatter
-								mainTexScale = 1,1
+								color = RGBA(255,240,255,255)
+								mainTex = BUILTIN/Minmus [Diffuse]
+								mainTexScale = 6,6
 								mainTexOffset = 0,0
-								bumpMap = BUILTIN/ikeScatterNRM
-								bumpMapScale = 1,1
+								bumpMap = BUILTIN/Minmus [Normal]
+								bumpMapScale = 6,6
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = KnuraSystem/meshes/pile.obj
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 12
+							maxScatter = 3
+							maxSpeed = 1000
+							minScale = 6
+							recieveShadows = True
+							name = dustSpires
+							seed = 98789
+							verticalOffset = -4
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = north
+							Material
+							{
+								color = RGBA(255,250,255,255)
+								mainTex = BUILTIN/Minmus [Diffuse]
+								mainTexScale = 6,6
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/Minmus [Normal]
+								bumpMapScale = 6,6
 								bumpMapOffset = 0,0
 							}
 							Experiment
@@ -439,50 +473,6 @@
 						{
 							materialType = BumpedDiffuse
 							mesh = BUILTIN/boulder
-							castShadows = True
-							densityFactor = 1
-							maxCache = 512
-							maxCacheDelta = 32
-							maxLevelOffset = 0
-							maxScale = 4
-							maxScatter = 5
-							maxSpeed = 1000
-							minScale = 2
-							recieveShadows = True
-							name = dustSpires
-							seed = 98789
-							verticalOffset = 0
-							delete = False
-							collide = True
-							science = False
-							Biomes
-							{
-								Value = Glitter Freeze
-							}
-							Material
-							{
-								color = RGBA(255,255,255,255)
-								mainTex = BUILTIN/gillyScatter
-								mainTexScale = 1,1
-								mainTexOffset = 0,0
-								bumpMap = BUILTIN/ikeScatterNRM
-								bumpMapScale = 1,1
-								bumpMapOffset = 0,0
-							}
-							Experiment
-							{
-							}
-							Components
-							{
-								ScatterColliders
-								{
-								}
-							}
-						}
-						Value
-						{
-							materialType = BumpedDiffuse
-							mesh = BUILTIN/bopGravelPile
 							castShadows = True
 							densityFactor = 0.4
 							maxCache = 512
