--- a/configs/Run.cfg
+++ b/configs/Run.cfg
@@ -24,14 +24,14 @@
             {
                 Biome
                 {
-                    name = Tippy Tips
+                    name = tippyTips
 					displayName = Tippy-Tips^N
                     value = 1.0
                     color = #000000
                 }
                 Biome
                 {
-                    name = Central Belt
+                    name = centralBelt
 					displayName = Central Belt^N
                     value = 1.0
                     color = #FFFFFF
@@ -508,19 +508,15 @@
 							maxScale = 6
 							maxScatter = 50
 							maxSpeed = 1000
-							minScale = 1
+							minScale = 4
 							recieveShadows = True
 							name = basicBoulders
 							seed = 6343524
 							verticalOffset = 0
 							delete = False
-							collide = False
+							collide = True
 							science = False
-							Biomes
-							{
-								Value = Central Belt
-								Value = Tippy Tips
-							}
+							allowedBiomes = centralBelt,tippyTips
 							Material
 							{
 								color = RGBA(183,165,159,255)
@@ -561,12 +557,6 @@
 							delete = False
 							collide = False
 							science = False
-							Biomes
-							{
-								Value = Central Belt
-								Value = Tippy Tips
-								Value = Greenock
-							}
 							Material
 							{
 								color = RGBA(183,165,159,255)
