Added more scatters to moons
I'm getting this odd issue where im seeing massive numbers of floating
scatters. I am not really sure what the common factor is for the bug
occuring - i first noticed on Gloth that if i deleted the cache and
loaded the game, the scatters  would spawn correctly, but if i closed
and reopened the game without clearing the cache, i'd get a second sset
of scatters that were either floating or underground.  It seemed as if
they were following the heightmap, but it had been displaced a bit? By
this i mean that they seemed to be conforming to invisible landscape features
rather than just being placed at random heights. I
also observed this on Lema.  However, while the issue was also present
on Chople, Ollagander and Basil, it presented a little differently in that the
floating scatters formed these hundred-meter tall ribbons that snaked
across the landscape, not following any features anywhere on the
heightmap. I am however not quite ready to rule out that this is just me
making some mistake so i'll look at some other mods to see how they do
scatters.

Next step is momuments!

--- a/configs/Chople.cfg
+++ b/configs/Chople.cfg
@@ -24,35 +24,35 @@
             {
                 Biome
                 {
-                    name = Grand Craggle
+                    name = craggle
 					displayName = Grand Craggle^N
                     value = 1.0
                     color = #000000
                 }
                 Biome
                 {
-                    name = Sintered Plateaus
+                    name = high
 					displayName = Sintered Plateaus^N
                     value = 1.0
                     color = #FF0000
                 }			
                 Biome
                 {
-                    name = Knap Ridges
+                    name = vHigh
 					displayName = Knap Ridges^N
                     value = 1.0
                     color = #FF6A00
                 }
                 Biome
                 {
-                    name = Vitrified Lakes
+                    name = mid
 					displayName = Vitrified Lakes^N
                     value = 1.0
                     color = #FFD800
                 }
                 Biome
                 {
-                    name = Vitrified Depths
+                    name = low
 					displayName = Vitrified Depths^N
                     value = 1.0
                     color = #7F0000
@@ -296,75 +296,159 @@
                 }
                 LandControl
 				{
-					altitudeBlend = 0.01
-					altitudeFrequency = 12
-					altitudeOctaves = 2
-					altitudePersistance = 0.6
-					altitudeSeed = 212121
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
 					createColors = False
 					createScatter = True
-					latitudeBlend = 0.05
-					latitudeFrequency = 4
-					latitudeOctaves = 4
-					latitudePersistance = 0.6
-					latitudeSeed = 47373
-					longitudeBlend = 0.05
-					longitudeFrequency = 4
-					longitudeOctaves = 4
-					longitudePersistance = 0.6
-					longitudeSeed = 768453
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
 					useHeightMap = False
-					vHeightMax = 3500
-					order = 9999999
+					vHeightMax = 40000
+					order = 999999
 					enabled = True
 					altitudeSimplex
 					{
-						frequency = 12
-						octaves = 2
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
 					latitudeSimplex
 					{
-						frequency = 4
-						octaves = 4
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
 					longitudeSimplex
 					{
-						frequency = 4
-						octaves = 4
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
-					landClasses
+					scatters
 					{
-						Class
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 2
+							maxScatter = 30
+							maxSpeed = 1000
+							minScale = 1
+							recieveShadows = True
+							name = basicBoulders
+							seed = 9567867
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = craggle
+							Material
+							{
+								color = RGBA(205,250,210,255)
+								mainTex = BUILTIN/Minmus [Diffuse]
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 1
+							maxScatter = 100
+							maxSpeed = 1000
+							minScale = 0.75
+							recieveShadows = True
+							name = pebs
+							seed = 935645
+							verticalOffset = 0.5
+							delete = False
+							collide = False
+							science = False
+							Material
+							{
+								color = RGBA(205,250,210,255)
+								mainTex = BUILTIN/Minmus [Diffuse]
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+					}
+					LandClasses
+					{
+						Value
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 0.7
-							coverageFrequency = 2
-							coverageOctaves = 4
-							coveragePersistance = 0.6
-							coverageSeed = 454545
-							name = Oceans
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
 							latDelta = 1
 							latitudeDouble = False
 							lonDelta = 1
 							minimumRealHeight = 0
-							noiseBlend = 1
-							noiseColor = 0,0,0,1
-							noiseFrequency = 12
-							noiseOctaves = 4
-							noisePersistance = 0.6
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
 							noiseSeed = 1
 							delete = False
 							altitudeRange
 							{
-								endEnd = 0
-								endStart = 0
-								startEnd = -25
-								startStart = -25
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
 							}
 							coverageSimplex
 							{
@@ -399,71 +483,21 @@
 								octaves = 1
 								persistence = 1
 							}
-						}
-						Class
-						{
-							alterApparentHeight = 0
-							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 0.7
-							coverageFrequency = 2
-							coverageOctaves = 4
-							coveragePersistance = 0.6
-							coverageSeed = 454545
-							name = Scatter
-							latDelta = 1
-							latitudeDouble = False
-							lonDelta = 1
-							minimumRealHeight = 0
-							noiseBlend = 1
-							noiseColor = 0,0,0,1
-							noiseFrequency = 12
-							noiseOctaves = 4
-							noisePersistance = 0.6
-							noiseSeed = 1
-							delete = False
-							altitudeRange
+							scatters
 							{
-								endEnd = 25
-								endStart = 25
-								startEnd = 0
-								startStart = 0
-							}
-							coverageSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
-							}
-							latitudeDoubleRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							latitudeRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							longitudeRange
-							{
-								endEnd = 2
-								endStart = 2
-								startEnd = -1
-								startStart = -1
-							}
-							noiseSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
+								Scatter
+								{
+									density = 1
+									scatterName = basicBoulders
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = pebs
+								}
 							}
 						}
-                    }
+					}
 				}
             }
         }
