--- a/configs/Basil.cfg
+++ b/configs/Basil.cfg
@@ -25,42 +25,42 @@
             {
                 Biome
                 {
-                    name = Mare Lamenta
+                    name = mar
 					displayName = Mare Lamenta^N
                     value = 1.0
                     color = #000000
                 }
                 Biome
                 {
-                    name = Basin Craters
+                    name = crateBasin
 					displayName = Basin Craters^N
                     value = 1.0
                     color = #C9FFD0
                 }			
                 Biome
                 {
-                    name = Buckshot Craters
+                    name = crateSmall
 					displayName = Buckshot Craters^N
                     value = 1.0
                     color = #FFFFCB
                 }
                 Biome
                 {
-                    name = Dizzying Highlands
+                    name = high
 					displayName = Dizzying Highlands^N
                     value = 1.0
                     color = #FF6A00
                 }
                 Biome
                 {
-                    name = Creamy Midlands
+                    name = mid
 					displayName = Creamy Midlands^N
                     value = 1.0
                     color = #FFD800
 				}
 				Biome
                 {
-                    name = Terrifying Lowlands
+                    name = low
 					displayName = Terrifying Lowlands^N
                     value = 1.0
                     color = #FF0000
@@ -182,14 +182,6 @@
 					B = 1
 					C = 0
                 }
-				AltitudeAlpha
-				{
-					atmosphereDepth = 8000
-					invert = False
-					order = 999999999
-					enabled = True
-					name = _Material_ModProjection
-				}
 				VertexSimplexHeight
 				{
 					deformity = 400
@@ -349,75 +341,201 @@
 
                 LandControl
 				{
-					altitudeBlend = 0.01
-					altitudeFrequency = 12
-					altitudeOctaves = 2
-					altitudePersistance = 0.6
-					altitudeSeed = 212121
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
 					createColors = False
 					createScatter = True
-					latitudeBlend = 0.05
-					latitudeFrequency = 4
-					latitudeOctaves = 4
-					latitudePersistance = 0.6
-					latitudeSeed = 47373
-					longitudeBlend = 0.05
-					longitudeFrequency = 4
-					longitudeOctaves = 4
-					longitudePersistance = 0.6
-					longitudeSeed = 768453
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
 					useHeightMap = False
-					vHeightMax = 3500
-					order = 9999999
+					vHeightMax = 40000
+					order = 999999
 					enabled = True
 					altitudeSimplex
 					{
-						frequency = 12
-						octaves = 2
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
 					latitudeSimplex
 					{
-						frequency = 4
-						octaves = 4
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
 					longitudeSimplex
 					{
-						frequency = 4
-						octaves = 4
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
-					landClasses
+					scatters
 					{
-						Class
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 7
+							maxScatter = 30
+							maxSpeed = 1000
+							minScale = 4
+							recieveShadows = True
+							name = basicBoulders
+							seed = 9567867
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = high,mid,low,crateBasin
+							Material
+							{
+								color = RGBA(206,220,230,255)
+								mainTex = BUILTIN/VallHigh[Spec-Diffuse]
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 2
+							maxScatter = 70
+							maxSpeed = 1000
+							minScale = 1
+							recieveShadows = True
+							name = pebs
+							seed = 935645
+							verticalOffset = 0.5
+							delete = False
+							collide = False
+							science = False
+							allowedBiomes = high,mid,low,crateSmall,crateBasin
+							Material
+							{
+								color = RGBA(206,220,230,255)
+								mainTex = BUILTIN/VallHigh[Spec-Diffuse]
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = KnuraSystem/meshes/bolide.obj
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 0.75
+							maxScatter = 15
+							maxSpeed = 1000
+							minScale = 0.35
+							recieveShadows = True
+							name = berry
+							seed = 935645
+							verticalOffset = 0
+							delete = False
+							collide = False
+							science = False
+							allowedBiomes = mar
+							Material
+							{
+								color = RGBA(94,126,196,255)
+								mainTex = BUILTIN/Minmus [Diffuse]
+								mainTexScale = 6,6
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/Minmus [Normal]
+								bumpMapScale = 6,6
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+					}
+					LandClasses
+					{
+						Value
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 0.7
-							coverageFrequency = 2
-							coverageOctaves = 4
-							coveragePersistance = 0.6
-							coverageSeed = 454545
-							name = Oceans
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
 							latDelta = 1
 							latitudeDouble = False
 							lonDelta = 1
 							minimumRealHeight = 0
-							noiseBlend = 1
-							noiseColor = 0,0,0,1
-							noiseFrequency = 12
-							noiseOctaves = 4
-							noisePersistance = 0.6
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
 							noiseSeed = 1
 							delete = False
 							altitudeRange
 							{
-								endEnd = 0
-								endStart = 0
-								startEnd = -25
-								startStart = -25
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
 							}
 							coverageSimplex
 							{
@@ -452,71 +570,26 @@
 								octaves = 1
 								persistence = 1
 							}
-						}
-						Class
-						{
-							alterApparentHeight = 0
-							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 0.7
-							coverageFrequency = 2
-							coverageOctaves = 4
-							coveragePersistance = 0.6
-							coverageSeed = 454545
-							name = Scatter
-							latDelta = 1
-							latitudeDouble = False
-							lonDelta = 1
-							minimumRealHeight = 0
-							noiseBlend = 1
-							noiseColor = 0,0,0,1
-							noiseFrequency = 12
-							noiseOctaves = 4
-							noisePersistance = 0.6
-							noiseSeed = 1
-							delete = False
-							altitudeRange
+							scatters
 							{
-								endEnd = 25
-								endStart = 25
-								startEnd = 0
-								startStart = 0
-							}
-							coverageSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
-							}
-							latitudeDoubleRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							latitudeRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							longitudeRange
-							{
-								endEnd = 2
-								endStart = 2
-								startEnd = -1
-								startStart = -1
-							}
-							noiseSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
+								Scatter
+								{
+									density = 1
+									scatterName = basicBoulders
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = pebs
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = berry
+								}
 							}
 						}
-                    }
+					}
 				}
             }
         }
