--- a/configs/Ollagander.cfg
+++ b/configs/Ollagander.cfg
@@ -24,84 +24,84 @@
             {
                 Biome
                 {
-                    name = Aquila Lowlands
+                    name = Aquila
 					displayName = Aquila Lowlands^N
                     value = 1.0
                     color = #000000
                 }
                 Biome
                 {
-                    name = Equus Highlands
+                    name = Equus
 					displayName = Equus Highlands^N
                     value = 1.0
                     color = #FFFFFF
                 }			
                 Biome
                 {
-                    name = Ursus Lowlands
+                    name = Ursus
 					displayName = Ursus Lowlands^N
                     value = 1.0
                     color = #404040
                 }
                 Biome
                 {
-                    name = Small Craters
+                    name = crateSmall
 					displayName = Small Craters^N
                     value = 1.0
                     color = #FF00DC
                 }
                 Biome
                 {
-                    name = Clay Basins
+                    name = Clay
 					displayName = Clay Basins^N
                     value = 1.0
                     color = #00137F
 				}		
 				Biome
                 {
-                    name = Weintraube Crater
+                    name = Weintraube
 					displayName = Weintraube Crater^N
                     value = 1.0
                     color = #FFB27F
 				}	
 				Biome
                 {
-                    name = Kassad Crater
+                    name = Kassad
 					displayName = Kassad Crater^N
                     value = 1.0
                     color = #7FFFFF
 				}	
 				Biome
                 {
-                    name = Consul Crater
+                    name = Consul
 					displayName = Consul Crater^N
                     value = 1.0
                     color = #A5FF7F
 				}	
 				Biome
                 {
-                    name = Hoyt Crater
+                    name = Hoyt
 					displayName = Hoyt Crater^N
                     value = 1.0
                     color = #DAFF7F
 				}	
 				Biome
                 {
-                    name = Brawne Crater
+                    name = Brawne
 					displayName = Brawne Crater^N
                     value = 1.0
                     color = #FFE97F
 				}	
 				Biome
                 {
-                    name = Martin Crater
+                    name = Martin
 					displayName = Martin Crater^N
                     value = 1.0
                     color = #FF7F7F
 				}		
 				Biome
                 {
-                    name = Het Crater
+                    name = Het
 					displayName = Het Crater^N
                     value = 1.0
                     color = #00FF90
@@ -522,75 +522,160 @@
 
 				LandControl
 				{
-					altitudeBlend = 0.01
-					altitudeFrequency = 12
-					altitudeOctaves = 2
-					altitudePersistance = 0.6
-					altitudeSeed = 212121
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
 					createColors = False
 					createScatter = True
-					latitudeBlend = 0.05
-					latitudeFrequency = 4
-					latitudeOctaves = 4
-					latitudePersistance = 0.6
-					latitudeSeed = 47373
-					longitudeBlend = 0.05
-					longitudeFrequency = 4
-					longitudeOctaves = 4
-					longitudePersistance = 0.6
-					longitudeSeed = 768453
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
 					useHeightMap = False
-					vHeightMax = 3500
-					order = 9999999
+					vHeightMax = 40000
+					order = 999999
 					enabled = True
 					altitudeSimplex
 					{
-						frequency = 12
-						octaves = 2
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
 					latitudeSimplex
 					{
-						frequency = 4
-						octaves = 4
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
 					longitudeSimplex
 					{
-						frequency = 4
-						octaves = 4
-						persistence = 0.600000023841858
+						frequency = 1
+						octaves = 1
+						persistence = 1
 					}
-					landClasses
+					scatters
 					{
-						Class
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 6
+							maxScatter = 50
+							maxSpeed = 1000
+							minScale = 4
+							recieveShadows = True
+							name = basicBoulders
+							seed = 6343524
+							verticalOffset = 0
+							delete = False
+							collide = True
+							science = False
+							allowedBiomes = Aquila,Equus,Ursus,Clay
+							Material
+							{
+								color = RGBA(154,143,140,255)
+								mainTex = BUILTIN/VallHigh[Spec-Diffuse]
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+						Value
+						{
+							materialType = BumpedDiffuse
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 2
+							maxScatter = 75
+							maxSpeed = 1000
+							minScale = 1
+							recieveShadows = True
+							name = pebs
+							seed = 935645
+							verticalOffset = 0
+							delete = False
+							collide = False
+							science = False
+							allowedBiomes = Aquila,Equus,Ursus,crateSmall,Clay
+							Material
+							{
+								color = color = RGBA(154,143,140,255)
+								mainTex = BUILTIN/VallHigh[Spec-Diffuse]
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+							Experiment
+							{
+							}
+							Components
+							{
+								ScatterColliders
+								{
+								}
+							}
+						}
+					}
+					LandClasses
+					{
+						Value
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 0.7
-							coverageFrequency = 2
-							coverageOctaves = 4
-							coveragePersistance = 0.6
-							coverageSeed = 454545
-							name = Oceans
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
 							latDelta = 1
 							latitudeDouble = False
 							lonDelta = 1
 							minimumRealHeight = 0
-							noiseBlend = 1
-							noiseColor = 0,0,0,1
-							noiseFrequency = 12
-							noiseOctaves = 4
-							noisePersistance = 0.6
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
 							noiseSeed = 1
 							delete = False
 							altitudeRange
 							{
-								endEnd = 0
-								endStart = 0
-								startEnd = -25
-								startStart = -25
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
 							}
 							coverageSimplex
 							{
@@ -625,71 +710,21 @@
 								octaves = 1
 								persistence = 1
 							}
-						}
-						Class
-						{
-							alterApparentHeight = 0
-							alterRealHeight = 0
-							color = 0,0,0,1
-							coverageBlend = 0.7
-							coverageFrequency = 2
-							coverageOctaves = 4
-							coveragePersistance = 0.6
-							coverageSeed = 454545
-							name = Scatter
-							latDelta = 1
-							latitudeDouble = False
-							lonDelta = 1
-							minimumRealHeight = 0
-							noiseBlend = 1
-							noiseColor = 0,0,0,1
-							noiseFrequency = 12
-							noiseOctaves = 4
-							noisePersistance = 0.6
-							noiseSeed = 1
-							delete = False
-							altitudeRange
+							scatters
 							{
-								endEnd = 25
-								endStart = 25
-								startEnd = 0
-								startStart = 0
-							}
-							coverageSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
-							}
-							latitudeDoubleRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							latitudeRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							longitudeRange
-							{
-								endEnd = 2
-								endStart = 2
-								startEnd = -1
-								startStart = -1
-							}
-							noiseSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
+								Scatter
+								{
+									density = 1
+									scatterName = basicBoulders
+								}
+								Scatter
+								{
+									density = 1
+									scatterName = pebs
+								}
 							}
 						}
-                    }
+					}
 				}
 			}
 		}
