Added readme, some minor changes.
Adding easter eggs has proven to me... non-trival.

--- a/configs/Hilli.cfg
+++ b/configs/Hilli.cfg
@@ -18,6 +18,7 @@
             rotationPeriod = 10000  // Rotation in seconds
             tidallyLocked = false
             albedo = 0.8
+			emissivity =  0.5
             // Look at the Kopernicus wiki for more properties to add.
 			biomeMap = KnuraSystem/textures/PluginData/Hilli_biomes.dds
             Biomes
@@ -119,9 +120,8 @@
 				factorRotation = 0
 				saturation = 2
 				contrast = 1
-				tintColor = 0,0,0,0
-				specularColor = 1,0.85,0.66,1
-				albedoBrightness = 5
+				tintColor = 1,1,1,0
+				albedoBrightness = 3
 				steepPower = 0.5
 				steepTexStart = 0
 				steepTexEnd = 0
@@ -304,14 +304,6 @@
 							}
 						}
 					}
-				}
-				AltitudeAlpha
-				{
-					atmosphereDepth = 8000
-					invert = False
-					order = 999999999
-					enabled = True
-					name = _Material_ModProjection
 				}
 				VertexSimplexHeight
 				{
