Multiple good changes
- Fixed Hilli and Sixle not looking metallic enough, thankfully without
  needing to resort to Parallax.  The configs just needed a little
  tweaking.
- Have added support for EVE:-
  - Proper shadow-casting for all bodies.  Previously i thought i would
    be limited to just the atmospheric bodies having eclipses through
    Scatter so i am ECSTATIC about this.  Hilli and Sixle look chefs
    kiss.
  - Added a basic titan-inspired cloud to Gloth.  It ain't much but
    boy-howdy its nice.  Will probably update later down the line with
    something a bit more professional looking.
- Added SigmaBinary to the dependancies.  This was also intended, but i
  had a bit of a CKAN freakout a few days ago and never reinstalled it.
  Hilli and Sixle are now back in their nice binary orbit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
-# Ignore everything...
-
+# This asterix tell Git to automatically ignore all files in the directory apart from the ones listed below with a "!".  Don't delete it.  
 *
 
-# ... Except the following
-
+# Need this to save the config
 !.gitignore
 
+# Dependancies
 !000_NiakoUtils/
 !000_NiakoUtils/**
 !001_DuckweedUtils/
 !001_DuckweedUtils/**
+!SigmaBinary/
+!SigmaBinary/**
 
+# Mod files
 !KnuraSystem/
 !KnuraSystem/**
 !Scatterer_KnuraSystem/
 !Scatterer_KnuraSystem/**
+!EVE_KnuraSystem/
+!EVE_KnuraSystem/**
+
