--- a/KnuraSystem/configs/Hilli.cfg
+++ b/KnuraSystem/configs/Hilli.cfg
@@ -59,8 +59,8 @@
                 texture = KnuraSystem/textures/PluginData/Hilli_color.dds // color
 				normals = KnuraSystem/textures/PluginData/Hilli_normal.dds // normals
                 color = 1,1,1,1
-                specColor = 1,0.85,0.66,1
-                shininess = 0.4
+                specColor = RGBA(204,135,71,255)
+                shininess = 0.75
             }
         }			
         PQS
