--- a/Scatterer_KnuraSystem/planetsList.cfg
+++ b/Scatterer_KnuraSystem/planetsList.cfg
@@ -36,7 +36,7 @@
 			unloadDistance = 75000000
 			hasOcean = True
 			flatScaledSpaceModel = True
-			usesCloudIntegration = False
+			usesCloudIntegration = True
 			cloudIntegrationUsesScattererSunColors = False
 			mainSunCelestialBody = Sun
             sunsUseIntensityCurves = False
